hphp/test/slow/ext_soap/ext_soap.php.expectf
Fatal error: SOAP_ERROR: Adding functions by string is unsupported in %s/ext_soap.php on line 105
